refactor: changed tests